// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MembersList Component should match snapshot with <RemoveMember/> 1`] = `
<div
  className="m_on followers_m_on"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="m_top"
  >
    <img
      src="/users/7/avatar.jpg"
    />
    <div
      className="m_top_right"
    >
      <Link
        to="/profile/ghalib"
      >
        ghalib
      </Link>
      <span>
        1 mutual follower
      </span>
    </div>
  </div>
  <div
    className="m_bottom"
  >
    <span
      className="recommend_by"
    >
      <div>
        by 
        <Link
          to="/profile/takkar"
        >
          You
        </Link>
      </div>
    </span>
    <a
      className="sec_btn"
      href="#"
      onClick={[Function]}
    >
      Remove 
    </a>
  </div>
</div>
`;

exports[`MembersList Component should match snapshot with profile link 1`] = `
<div
  className="m_on followers_m_on"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="m_top"
  >
    <img
      src="/users/24/avatar.jpg"
    />
    <div
      className="m_top_right"
    >
      <Link
        to="/profile/takkar"
      >
        takkar
      </Link>
      <span
        className="grp_admin"
      >
        admin
      </span>
      <span>
        Mirza Ghalib
      </span>
    </div>
  </div>
  <div
    className="m_bottom"
  >
    <span
      className="recommend_by"
    />
    <Link
      className="sec_btn"
      to="/profile/takkar"
    >
      Profile
    </Link>
  </div>
</div>
`;
